# CathayRagBot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test_insurance_qa.py
src/agents/: insurance_agent.py
src/insurance_qa/: chat_engine.py  policy_index.py  policy_parser.py  prompts.py
src/tools/: document_search.py
storage/: default__vector_store.json  docstore.json  index_store.json
